remote .ods from traccking

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ fp-info-cache
 # As this project is about managing local KiCad libraries, all KiCad project files will be ignored.
 
 kicad-library
+.ods
